|
Quick Lists
|
|
Bug ID:
|
6718086
|
|
Votes
|
0
|
|
Synopsis
|
CMS assert: _concurrent_iteration_safe_limit update missed
|
|
Category
|
hotspot:garbage_collector
|
|
Reported Against
|
|
|
Release Fixed
|
hs14(b06)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
6692899
|
|
Submit Date
|
23-JUN-2008
|
|
Description
|
A large number of parallel class loading tests (as well as a few other tests)
failed in the hg/hotspot-g1-gc repo testing with the assert:
_concurrent_iteration_safe_limit <= top():
"_concurrent_iteration_safe_limit update missed"
See, for instance:
http://sqeweb.sfbay/nfs/tools/gtee/results/JDK7/NIGHTLY/VM/2008-06-20/GC_Baseline-Xconc/vm/linux-i586/server/mixed/vm-linux-i586_server_mixed_vm.parallel_class_loading.testlist2008-06-20-21-18-50/ResultDir/anonymous-simple_copy_3/anonymous-simple.log
[2008-06-21T06: customer : customer .77] # after -XX: or in .hotspotrc: SuppressErrorAt=/space.inline.hpp:65
[2008-06-21T06: customer : customer .77] #
[2008-06-21T06: customer : customer .77] # A fatal error has been detected by the Java Runtime Environment:
[2008-06-21T06: customer : customer .77] #
[2008-06-21T06: customer : customer .77] # Internal Error (/tmp/jprt-jprtadm/temp/P1/B/154254.ysr/source/src/share/vm/memory/space.inline.hpp:65), pid=27386, tid=2888154032
[2008-06-21T06: customer : customer .77] # Error: assert(_concurrent_iteration_safe_limit <= top(),"_concurrent_iteration_safe_limit update missed")
[2008-06-21T06: customer : customer .77] #
[2008-06-21T06: customer : customer .77] # Java VM: Java HotSpot(TM) Server VM (13.0-b02-2008-06-17-154254.ysr.hg_g1_gc_baseline-fastdebug mixed mode linux-x86 )
[2008-06-21T06: customer : customer .77] # An error report file with more information is saved as:
[2008-06-21T06: customer : customer .77] # /export/local/6175.JDK7.NIGHTLY.VM+linux-i586_server_mixed_vm.parallel_class_loading.testlist/results/ResultDir/anonymous-simple_copy_3/hs_err_pid27386.log
[2008-06-21T06: customer : customer .77] #
[2008-06-21T06: customer : customer .77] # If you would like to submit a bug report, please visit:
[2008-06-21T06: customer : customer .77] # http://java.sun.com/webapps/bugreport/crash.jsp
[2008-06-21T06: customer : customer .77] #
Posted Date : 2008-06-23 20:49:35.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
The field ContiguousSpace::_concurrent_iteration_safe_limit had not
been correctly initialized.
Part of the problem was a merge-o into the G1 workspace from gc_baseline,
and part of the problem was a missing c'tor initializer (the latter will
become part of gc_baseline once G1 integrates).
Posted Date : 2008-06-23 20:49:35.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/60fb9c4db4e6
Posted Date : 2008-08-28 05:35:39.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |