6718086: CMS assert: _concurrent_iteration_safe_limit update missed

Initialize the field correctly in ContiguousSpace's constructor and initialize() methods, using the latter for the survivor spaces upon initial construction or a subsequent resizing of the young generation. Add some missing Space sub-class constructors.

Reviewed-by: apetrusenko